--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+/*! Get Social Font - Icon Set 1.3 | http://haeckdesign.com/freebies/icons/get-social-icon-set | (c) 2015 Haeck Design | CC BY-SA */
+
 @font-face {
 	font-family: 'Get-Social-Font';
-	src:url('fonts/Get-Social-Font.eot?84f3qy');
-	src:url('fonts/Get-Social-Font.eot?#iefix84f3qy') format('embedded-opentype'),
-		url('fonts/Get-Social-Font.ttf?84f3qy') format('truetype'),
-		url('fonts/Get-Social-Font.woff?84f3qy') format('woff'),
-		url('fonts/Get-Social-Font.svg?84f3qy#Get-Social-Font') format('svg');
+	src:url('fonts/Get-Social-Font.eot');
+	src:url('fonts/Get-Social-Font.eot#iefix') format('embedded-opentype'),
+		url('fonts/Get-Social-Font.ttf') format('truetype'),
+		url('fonts/Get-Social-Font.woff') format('woff'),
+		url('fonts/Get-Social-Font.svg#Get-Social-Font') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -26,6 +28,9 @@
 .gsicon-behance:before {
 	content: "\e600";
 }
+.gsicon-bing:before {
+	content: "\e901";
+}
 .gsicon-bitbucket:before {
 	content: "\e601";
 }
@@ -38,11 +43,20 @@
 .gsicon-codepen:before {
 	content: "\e606";
 }
-.gsicon-digg:before {
-	content: "\e608";
+.gsicon-css3:before {
+	content: "\e607";
+}
+.gsicon-css3-box:before {
+	content: "\e639";
 }
 .gsicon-deviantart:before {
 	content: "\e609";
+}
+.gsicon-digg:before {
+	content: "\e608";
+}
+.gsicon-disqus:before {
+	content: "\e905";
 }
 .gsicon-dribbble:before {
 	content: "\e60a";
@@ -53,14 +67,14 @@
 .gsicon-drupal:before {
 	content: "\e60c";
 }
-.gsicon-evernote:before {
-	content: "\e60d";
-}
 .gsicon-ello:before {
 	content: "\e60e";
 }
 .gsicon-etsy:before {
 	content: "\e633";
+}
+.gsicon-evernote:before {
+	content: "\e60d";
 }
 .gsicon-facebook:before {
 	content: "\e604";
@@ -74,35 +88,44 @@
 .gsicon-flickr:before {
 	content: "\e610";
 }
-.gsicon-foursquare:before {
-	content: "\e611";
-}
 .gsicon-forrst:before {
 	content: "\e612";
+}
+.gsicon-foursquare:before {
+	content: "\e611";
 }
 .gsicon-github:before {
 	content: "\e613";
 }
-.gsicon-github-icon:before {
-	content: "\e614";
-}
-.gsicon-google-plus:before {
-	content: "\e615";
+.gsicon-google:before {
+	content: "\e908";
 }
 .gsicon-google-drive:before {
 	content: "\e616";
 }
+.gsicon-google-plus:before {
+	content: "\e615";
+}
 .gsicon-grooveshark:before {
 	content: "\e617";
+}
+.gsicon-houzz:before {
+	content: "\e90a";
+}
+.gsicon-html5:before {
+	content: "\e618";
+}
+.gsicon-html5-box:before {
+	content: "\e638";
+}
+.gsicon-ie:before {
+	content: "\e61a";
 }
 .gsicon-icloud:before {
 	content: "\e635";
 }
 .gsicon-instagram:before {
 	content: "\e619";
-}
-.gsicon-ie:before {
-	content: "\e61a";
 }
 .gsicon-joomla:before {
 	content: "\e61b";
@@ -113,6 +136,9 @@
 .gsicon-linkedin:before {
 	content: "\e61d";
 }
+.gsicon-meerkat:before {
+	content: "\e900";
+}
 .gsicon-myspace:before {
 	content: "\e61e";
 }
@@ -122,8 +148,14 @@
 .gsicon-paypal:before {
 	content: "\e620";
 }
+.gsicon-periscope:before {
+	content: "\e90b";
+}
 .gsicon-pinterest:before {
 	content: "\e621";
+}
+.gsicon-pocket:before {
+	content: "\e90c";
 }
 .gsicon-reddit:before {
 	content: "\e622";
@@ -137,8 +169,14 @@
 .gsicon-skype:before {
 	content: "\e625";
 }
+.gsicon-slack:before {
+	content: "\e902";
+}
 .gsicon-snapchat:before {
 	content: "\e636";
+}
+.gsicon-soundcloud:before {
+	content: "\e629";
 }
 .gsicon-spotify:before {
 	content: "\e626";
@@ -148,9 +186,6 @@
 }
 .gsicon-stumbleupon:before {
 	content: "\e628";
-}
-.gsicon-soundcloud:before {
-	content: "\e629";
 }
 .gsicon-tumblr:before {
 	content: "\e62a";
@@ -164,8 +199,14 @@
 .gsicon-vine:before {
 	content: "\e62c";
 }
+.gsicon-vk:before {
+	content: "\e90d";
+}
 .gsicon-whatsapp:before {
 	content: "\e637";
+}
+.gsicon-wikipedia:before {
+	content: "\e90f";
 }
 .gsicon-wordpress:before {
 	content: "\e62d";
@@ -182,18 +223,7 @@
 .gsicon-500px:before {
 	content: "\e631";
 }
-.gsicon-html5:before {
-	content: "\e618";
-}
-.gsicon-css3:before {
-	content: "\e607";
-}
-.gsicon-html5-box:before {
-	content: "\e638";
-}
-.gsicon-css3-box:before {
-	content: "\e639";
-}
 .gsicon-tribars:before {
 	content: "\e632";
 }
+
