--- a/style.scss
+++ b/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'Get-Social-Font';
-  src:  url('#{$icomoon-font-path}/Get-Social-Font.eot?d34evb');
-  src:  url('#{$icomoon-font-path}/Get-Social-Font.eot?d34evb#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/Get-Social-Font.ttf?d34evb') format('truetype'),
-    url('#{$icomoon-font-path}/Get-Social-Font.woff?d34evb') format('woff'),
-    url('#{$icomoon-font-path}/Get-Social-Font.svg?d34evb#Get-Social-Font') format('svg');
+  src:  url('#{$icomoon-font-path}/Get-Social-Font.eot?nj80ne');
+  src:  url('#{$icomoon-font-path}/Get-Social-Font.eot?nj80ne#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/Get-Social-Font.ttf?nj80ne') format('truetype'),
+    url('#{$icomoon-font-path}/Get-Social-Font.woff?nj80ne') format('woff'),
+    url('#{$icomoon-font-path}/Get-Social-Font.svg?nj80ne#Get-Social-Font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,19 +26,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.gsicon-apple {
-  &:before {
-    content: $gsicon-apple;
-  }
-}
 .gsicon-behance {
   &:before {
     content: $gsicon-behance;
-  }
-}
-.gsicon-bing {
-  &:before {
-    content: $gsicon-bing;
   }
 }
 .gsicon-bitbucket {
@@ -56,19 +46,9 @@
     content: $gsicon-chrome;
   }
 }
-.gsicon-disqus {
-  &:before {
-    content: $gsicon-disqus;
-  }
-}
 .gsicon-facebook {
   &:before {
     content: $gsicon-facebook;
-  }
-}
-.gsicon-facebook-messanger {
-  &:before {
-    content: $gsicon-facebook-messanger;
   }
 }
 .gsicon-twitter {
@@ -84,11 +64,6 @@
 .gsicon-css3 {
   &:before {
     content: $gsicon-css3;
-  }
-}
-.gsicon-css3-box {
-  &:before {
-    content: $gsicon-css3-box;
   }
 }
 .gsicon-digg {
@@ -111,19 +86,9 @@
     content: $gsicon-dropbox;
   }
 }
-.gsicon-delicious {
-  &:before {
-    content: $gsicon-delicious;
-  }
-}
 .gsicon-drupal {
   &:before {
     content: $gsicon-drupal;
-  }
-}
-.gsicon-etsy {
-  &:before {
-    content: $gsicon-etsy;
   }
 }
 .gsicon-evernote {
@@ -146,11 +111,6 @@
     content: $gsicon-flickr;
   }
 }
-.gsicon-flipboard {
-  &:before {
-    content: $gsicon-flipboard;
-  }
-}
 .gsicon-foursquare {
   &:before {
     content: $gsicon-foursquare;
@@ -159,11 +119,6 @@
 .gsicon-github {
   &:before {
     content: $gsicon-github;
-  }
-}
-.gsicon-google {
-  &:before {
-    content: $gsicon-google;
   }
 }
 .gsicon-google-plus {
@@ -181,24 +136,9 @@
     content: $gsicon-grooveshark;
   }
 }
-.gsicon-houzz {
-  &:before {
-    content: $gsicon-houzz;
-  }
-}
 .gsicon-html5 {
   &:before {
     content: $gsicon-html5;
-  }
-}
-.gsicon-html5-box {
-  &:before {
-    content: $gsicon-html5-box;
-  }
-}
-.gsicon-icloud {
-  &:before {
-    content: $gsicon-icloud;
   }
 }
 .gsicon-instagram {
@@ -231,29 +171,9 @@
     content: $gsicon-myspace;
   }
 }
-.gsicon-mailchimp {
-  &:before {
-    content: $gsicon-mailchimp;
-  }
-}
-.gsicon-medium {
-  &:before {
-    content: $gsicon-medium;
-  }
-}
-.gsicon-meerkat {
-  &:before {
-    content: $gsicon-meerkat;
-  }
-}
 .gsicon-opera {
   &:before {
     content: $gsicon-opera;
-  }
-}
-.gsicon-patreon {
-  &:before {
-    content: $gsicon-patreon;
   }
 }
 .gsicon-paypal {
@@ -261,24 +181,9 @@
     content: $gsicon-paypal;
   }
 }
-.gsicon-periscope {
-  &:before {
-    content: $gsicon-periscope;
-  }
-}
 .gsicon-pinterest {
   &:before {
     content: $gsicon-pinterest;
-  }
-}
-.gsicon-pocket {
-  &:before {
-    content: $gsicon-pocket;
-  }
-}
-.gsicon-quora {
-  &:before {
-    content: $gsicon-quora;
   }
 }
 .gsicon-reddit {
@@ -299,16 +204,6 @@
 .gsicon-skype {
   &:before {
     content: $gsicon-skype;
-  }
-}
-.gsicon-slack {
-  &:before {
-    content: $gsicon-slack;
-  }
-}
-.gsicon-snapchat {
-  &:before {
-    content: $gsicon-snapchat;
   }
 }
 .gsicon-spotify {
@@ -336,34 +231,9 @@
     content: $gsicon-tumblr;
   }
 }
-.gsicon-twitch {
-  &:before {
-    content: $gsicon-twitch;
-  }
-}
-.gsicon-ubuntu {
-  &:before {
-    content: $gsicon-ubuntu;
-  }
-}
-.gsicon-vk {
-  &:before {
-    content: $gsicon-vk;
-  }
-}
 .gsicon-vimeo {
   &:before {
     content: $gsicon-vimeo;
-  }
-}
-.gsicon-whatsapp {
-  &:before {
-    content: $gsicon-whatsapp;
-  }
-}
-.gsicon-wikipedia {
-  &:before {
-    content: $gsicon-wikipedia;
   }
 }
 .gsicon-wordpress {
@@ -396,69 +266,199 @@
     content: $gsicon-tribars;
   }
 }
-.gsicon-by {
+.gsicon-etsy {
   &:before {
-    content: $gsicon-by;
+    content: $gsicon-etsy;
   }
 }
-.gsicon-cc {
+.gsicon-facebook-messanger {
   &:before {
-    content: $gsicon-cc;
+    content: $gsicon-facebook-messanger;
   }
 }
-.gsicon-nc-eu {
+.gsicon-icloud {
   &:before {
-    content: $gsicon-nc-eu;
+    content: $gsicon-icloud;
   }
 }
-.gsicon-nc-jp {
+.gsicon-snapchat {
   &:before {
-    content: $gsicon-nc-jp;
+    content: $gsicon-snapchat;
   }
 }
-.gsicon-nc {
+.gsicon-whatsapp {
   &:before {
-    content: $gsicon-nc;
+    content: $gsicon-whatsapp;
   }
 }
-.gsicon-nd {
+.gsicon-html5-box {
   &:before {
-    content: $gsicon-nd;
+    content: $gsicon-html5-box;
   }
 }
-.gsicon-pd {
+.gsicon-css3-box {
   &:before {
-    content: $gsicon-pd;
+    content: $gsicon-css3-box;
   }
 }
-.gsicon-remix {
+.gsicon-apple {
   &:before {
-    content: $gsicon-remix;
+    content: $gsicon-apple;
   }
 }
-.gsicon-sa {
+.gsicon-bing {
   &:before {
-    content: $gsicon-sa;
+    content: $gsicon-bing;
   }
 }
-.gsicon-sampling {
+.gsicon-delicious {
   &:before {
-    content: $gsicon-sampling;
+    content: $gsicon-delicious;
   }
 }
-.gsicon-sampling-plus {
+.gsicon-flipboard {
   &:before {
-    content: $gsicon-sampling-plus;
+    content: $gsicon-flipboard;
   }
 }
-.gsicon-share {
+.gsicon-mailchimp {
   &:before {
-    content: $gsicon-share;
+    content: $gsicon-mailchimp;
   }
 }
-.gsicon-zero {
+.gsicon-disqus {
   &:before {
-    content: $gsicon-zero;
+    content: $gsicon-disqus;
+  }
+}
+.gsicon-meerkat {
+  &:before {
+    content: $gsicon-meerkat;
+  }
+}
+.gsicon-medium {
+  &:before {
+    content: $gsicon-medium;
+  }
+}
+.gsicon-google {
+  &:before {
+    content: $gsicon-google;
+  }
+}
+.gsicon-patreon {
+  &:before {
+    content: $gsicon-patreon;
+  }
+}
+.gsicon-houzz {
+  &:before {
+    content: $gsicon-houzz;
+  }
+}
+.gsicon-periscope {
+  &:before {
+    content: $gsicon-periscope;
+  }
+}
+.gsicon-pocket {
+  &:before {
+    content: $gsicon-pocket;
+  }
+}
+.gsicon-quora {
+  &:before {
+    content: $gsicon-quora;
+  }
+}
+.gsicon-slack {
+  &:before {
+    content: $gsicon-slack;
+  }
+}
+.gsicon-twitch {
+  &:before {
+    content: $gsicon-twitch;
+  }
+}
+.gsicon-ubuntu {
+  &:before {
+    content: $gsicon-ubuntu;
+  }
+}
+.gsicon-vk {
+  &:before {
+    content: $gsicon-vk;
+  }
+}
+.gsicon-wikipedia {
+  &:before {
+    content: $gsicon-wikipedia;
+  }
+}
+.gsicon-cc-remix {
+  &:before {
+    content: $gsicon-cc-remix;
+  }
+}
+.gsicon-cc-zero {
+  &:before {
+    content: $gsicon-cc-zero;
+  }
+}
+.gsicon-cc-by {
+  &:before {
+    content: $gsicon-cc-by;
+  }
+}
+.gsicon-cc-cc {
+  &:before {
+    content: $gsicon-cc-cc;
+  }
+}
+.gsicon-cc-nc-eu {
+  &:before {
+    content: $gsicon-cc-nc-eu;
+  }
+}
+.gsicon-cc-nc-jp {
+  &:before {
+    content: $gsicon-cc-nc-jp;
+  }
+}
+.gsicon-cc-nc {
+  &:before {
+    content: $gsicon-cc-nc;
+  }
+}
+.gsicon-cc-nd {
+  &:before {
+    content: $gsicon-cc-nd;
+  }
+}
+.gsicon-cc-pd {
+  &:before {
+    content: $gsicon-cc-pd;
+  }
+}
+.gsicon-cc-sa {
+  &:before {
+    content: $gsicon-cc-sa;
+  }
+}
+.gsicon-cc-sampling-plus {
+  &:before {
+    content: $gsicon-cc-sampling-plus;
+  }
+}
+.gsicon-cc-sampling {
+  &:before {
+    content: $gsicon-cc-sampling;
+  }
+}
+.gsicon-cc-share {
+  &:before {
+    content: $gsicon-cc-share;
   }
 }
 
