--- a/style.scss
+++ b/style.scss
@@ -2,16 +2,16 @@
 
 @font-face {
   font-family: 'Get-Social-Font';
-  src:  url('#{$icomoon-font-path}/Get-Social-Font.eot?nj80ne');
-  src:  url('#{$icomoon-font-path}/Get-Social-Font.eot?nj80ne#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/Get-Social-Font.ttf?nj80ne') format('truetype'),
-    url('#{$icomoon-font-path}/Get-Social-Font.woff?nj80ne') format('woff'),
-    url('#{$icomoon-font-path}/Get-Social-Font.svg?nj80ne#Get-Social-Font') format('svg');
+  src:  url('#{$icomoon-font-path}/Get-Social-Font.eot?demmwc');
+  src:  url('#{$icomoon-font-path}/Get-Social-Font.eot?demmwc#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/Get-Social-Font.ttf?demmwc') format('truetype'),
+    url('#{$icomoon-font-path}/Get-Social-Font.woff?demmwc') format('woff'),
+    url('#{$icomoon-font-path}/Get-Social-Font.svg?demmwc#Get-Social-Font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="gsicon-"], [class*=" gsicon-"] {
+i {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'Get-Social-Font' !important;
   speak: none;
@@ -26,439 +26,444 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.gsicon-behance {
-  &:before {
-    content: $gsicon-behance;
-  }
-}
-.gsicon-bitbucket {
-  &:before {
-    content: $gsicon-bitbucket;
-  }
-}
-.gsicon-blogger {
-  &:before {
-    content: $gsicon-blogger;
-  }
-}
-.gsicon-chrome {
-  &:before {
-    content: $gsicon-chrome;
-  }
-}
-.gsicon-facebook {
-  &:before {
-    content: $gsicon-facebook;
-  }
-}
-.gsicon-twitter {
-  &:before {
-    content: $gsicon-twitter;
-  }
-}
-.gsicon-codepen {
-  &:before {
-    content: $gsicon-codepen;
-  }
-}
-.gsicon-css3 {
-  &:before {
-    content: $gsicon-css3;
-  }
-}
-.gsicon-digg {
-  &:before {
-    content: $gsicon-digg;
-  }
-}
-.gsicon-deviantart {
-  &:before {
-    content: $gsicon-deviantart;
-  }
-}
-.gsicon-dribbble {
-  &:before {
-    content: $gsicon-dribbble;
-  }
-}
-.gsicon-dropbox {
-  &:before {
-    content: $gsicon-dropbox;
-  }
-}
-.gsicon-drupal {
-  &:before {
-    content: $gsicon-drupal;
-  }
-}
-.gsicon-evernote {
-  &:before {
-    content: $gsicon-evernote;
-  }
-}
-.gsicon-ello {
-  &:before {
-    content: $gsicon-ello;
-  }
-}
-.gsicon-firefox {
-  &:before {
-    content: $gsicon-firefox;
-  }
-}
-.gsicon-flickr {
-  &:before {
-    content: $gsicon-flickr;
-  }
-}
-.gsicon-foursquare {
-  &:before {
-    content: $gsicon-foursquare;
-  }
-}
-.gsicon-github {
-  &:before {
-    content: $gsicon-github;
-  }
-}
-.gsicon-google-plus {
-  &:before {
-    content: $gsicon-google-plus;
-  }
-}
-.gsicon-google-drive {
-  &:before {
-    content: $gsicon-google-drive;
-  }
-}
-.gsicon-grooveshark {
-  &:before {
-    content: $gsicon-grooveshark;
-  }
-}
-.gsicon-html5 {
-  &:before {
-    content: $gsicon-html5;
-  }
-}
-.gsicon-instagram {
-  &:before {
-    content: $gsicon-instagram;
-  }
-}
-.gsicon-ie {
-  &:before {
-    content: $gsicon-ie;
-  }
-}
-.gsicon-joomla {
-  &:before {
-    content: $gsicon-joomla;
-  }
-}
-.gsicon-lastfm {
-  &:before {
-    content: $gsicon-lastfm;
-  }
-}
-.gsicon-linkedin {
-  &:before {
-    content: $gsicon-linkedin;
-  }
-}
-.gsicon-myspace {
-  &:before {
-    content: $gsicon-myspace;
-  }
-}
-.gsicon-opera {
-  &:before {
-    content: $gsicon-opera;
-  }
-}
-.gsicon-paypal {
-  &:before {
-    content: $gsicon-paypal;
-  }
-}
-.gsicon-pinterest {
-  &:before {
-    content: $gsicon-pinterest;
-  }
-}
-.gsicon-reddit {
-  &:before {
-    content: $gsicon-reddit;
-  }
-}
-.gsicon-rss {
-  &:before {
-    content: $gsicon-rss;
-  }
-}
-.gsicon-safari {
-  &:before {
-    content: $gsicon-safari;
-  }
-}
-.gsicon-skype {
-  &:before {
-    content: $gsicon-skype;
-  }
-}
-.gsicon-spotify {
-  &:before {
-    content: $gsicon-spotify;
-  }
-}
-.gsicon-stack-overflow {
-  &:before {
-    content: $gsicon-stack-overflow;
-  }
-}
-.gsicon-stumbleupon {
-  &:before {
-    content: $gsicon-stumbleupon;
-  }
-}
-.gsicon-soundcloud {
-  &:before {
-    content: $gsicon-soundcloud;
-  }
-}
-.gsicon-tumblr {
-  &:before {
-    content: $gsicon-tumblr;
-  }
-}
-.gsicon-vimeo {
-  &:before {
-    content: $gsicon-vimeo;
-  }
-}
-.gsicon-wordpress {
-  &:before {
-    content: $gsicon-wordpress;
-  }
-}
-.gsicon-yelp {
-  &:before {
-    content: $gsicon-yelp;
-  }
-}
-.gsicon-youtube {
-  &:before {
-    content: $gsicon-youtube;
-  }
-}
-.gsicon-zerply {
-  &:before {
-    content: $gsicon-zerply;
-  }
-}
-.gsicon-500px {
-  &:before {
-    content: $gsicon-500px;
-  }
-}
-.gsicon-tribars {
-  &:before {
-    content: $gsicon-tribars;
-  }
-}
-.gsicon-etsy {
-  &:before {
-    content: $gsicon-etsy;
-  }
-}
-.gsicon-facebook-messanger {
-  &:before {
-    content: $gsicon-facebook-messanger;
-  }
-}
-.gsicon-icloud {
-  &:before {
-    content: $gsicon-icloud;
-  }
-}
-.gsicon-snapchat {
-  &:before {
-    content: $gsicon-snapchat;
-  }
-}
-.gsicon-whatsapp {
-  &:before {
-    content: $gsicon-whatsapp;
-  }
-}
-.gsicon-html5-box {
-  &:before {
-    content: $gsicon-html5-box;
-  }
-}
-.gsicon-css3-box {
-  &:before {
-    content: $gsicon-css3-box;
-  }
-}
 .gsicon-apple {
   &:before {
-    content: $gsicon-apple;
+    content: $gsicon-apple; 
+  }
+}
+.gsicon-behance {
+  &:before {
+    content: $gsicon-behance; 
   }
 }
 .gsicon-bing {
   &:before {
-    content: $gsicon-bing;
+    content: $gsicon-bing; 
+  }
+}
+.gsicon-bitbucket {
+  &:before {
+    content: $gsicon-bitbucket; 
+  }
+}
+.gsicon-blogger {
+  &:before {
+    content: $gsicon-blogger; 
+  }
+}
+.gsicon-chrome {
+  &:before {
+    content: $gsicon-chrome; 
+  }
+}
+.gsicon-codepen {
+  &:before {
+    content: $gsicon-codepen; 
+  }
+}
+.gsicon-css3 {
+  &:before {
+    content: $gsicon-css3; 
+  }
+}
+.gsicon-css3-box {
+  &:before {
+    content: $gsicon-css3-box; 
   }
 }
 .gsicon-delicious {
   &:before {
-    content: $gsicon-delicious;
+    content: $gsicon-delicious; 
   }
 }
-.gsicon-flipboard {
+.gsicon-digg {
   &:before {
-    content: $gsicon-flipboard;
-  }
-}
-.gsicon-mailchimp {
-  &:before {
-    content: $gsicon-mailchimp;
+    content: $gsicon-digg; 
   }
 }
 .gsicon-disqus {
   &:before {
-    content: $gsicon-disqus;
+    content: $gsicon-disqus; 
   }
 }
-.gsicon-meerkat {
+.gsicon-deviantart {
   &:before {
-    content: $gsicon-meerkat;
+    content: $gsicon-deviantart; 
   }
 }
-.gsicon-medium {
+.gsicon-dribbble {
   &:before {
-    content: $gsicon-medium;
+    content: $gsicon-dribbble; 
+  }
+}
+.gsicon-dropbox {
+  &:before {
+    content: $gsicon-dropbox; 
+  }
+}
+.gsicon-drupal {
+  &:before {
+    content: $gsicon-drupal; 
+  }
+}
+.gsicon-ello {
+  &:before {
+    content: $gsicon-ello; 
+  }
+}
+.gsicon-etsy {
+  &:before {
+    content: $gsicon-etsy; 
+  }
+}
+.gsicon-evernote {
+  &:before {
+    content: $gsicon-evernote; 
+  }
+}
+.gsicon-facebook {
+  &:before {
+    content: $gsicon-facebook; 
+  }
+}
+.gsicon-facebook-messanger {
+  &:before {
+    content: $gsicon-facebook-messanger; 
+  }
+}
+.gsicon-firefox {
+  &:before {
+    content: $gsicon-firefox; 
+  }
+}
+.gsicon-flickr {
+  &:before {
+    content: $gsicon-flickr; 
+  }
+}
+.gsicon-flipboard {
+  &:before {
+    content: $gsicon-flipboard; 
+  }
+}
+.gsicon-foursquare {
+  &:before {
+    content: $gsicon-foursquare; 
+  }
+}
+.gsicon-github {
+  &:before {
+    content: $gsicon-github; 
+  }
+}
+.gsicon-gitlab {
+  &:before {
+    content: $gsicon-gitlab; 
   }
 }
 .gsicon-google {
   &:before {
-    content: $gsicon-google;
+    content: $gsicon-google; 
   }
 }
-.gsicon-patreon {
+.gsicon-google-plus {
   &:before {
-    content: $gsicon-patreon;
+    content: $gsicon-google-plus; 
+  }
+}
+.gsicon-google-drive {
+  &:before {
+    content: $gsicon-google-drive; 
+  }
+}
+.gsicon-grooveshark {
+  &:before {
+    content: $gsicon-grooveshark; 
   }
 }
 .gsicon-houzz {
   &:before {
-    content: $gsicon-houzz;
+    content: $gsicon-houzz; 
+  }
+}
+.gsicon-html5 {
+  &:before {
+    content: $gsicon-html5; 
+  }
+}
+.gsicon-html5-box {
+  &:before {
+    content: $gsicon-html5-box; 
+  }
+}
+.gsicon-icloud {
+  &:before {
+    content: $gsicon-icloud; 
+  }
+}
+.gsicon-instagram {
+  &:before {
+    content: $gsicon-instagram; 
+  }
+}
+.gsicon-ie {
+  &:before {
+    content: $gsicon-ie; 
+  }
+}
+.gsicon-joomla {
+  &:before {
+    content: $gsicon-joomla; 
+  }
+}
+.gsicon-lastfm {
+  &:before {
+    content: $gsicon-lastfm; 
+  }
+}
+.gsicon-linkedin {
+  &:before {
+    content: $gsicon-linkedin; 
+  }
+}
+.gsicon-mailchimp {
+  &:before {
+    content: $gsicon-mailchimp; 
+  }
+}
+.gsicon-meerkat {
+  &:before {
+    content: $gsicon-meerkat; 
+  }
+}
+.gsicon-medium {
+  &:before {
+    content: $gsicon-medium; 
+  }
+}
+.gsicon-myspace {
+  &:before {
+    content: $gsicon-myspace; 
+  }
+}
+.gsicon-opera {
+  &:before {
+    content: $gsicon-opera; 
+  }
+}
+.gsicon-patreon {
+  &:before {
+    content: $gsicon-patreon; 
+  }
+}
+.gsicon-paypal {
+  &:before {
+    content: $gsicon-paypal; 
   }
 }
 .gsicon-periscope {
   &:before {
-    content: $gsicon-periscope;
+    content: $gsicon-periscope; 
+  }
+}
+.gsicon-pinterest {
+  &:before {
+    content: $gsicon-pinterest; 
   }
 }
 .gsicon-pocket {
   &:before {
-    content: $gsicon-pocket;
+    content: $gsicon-pocket; 
   }
 }
 .gsicon-quora {
   &:before {
-    content: $gsicon-quora;
+    content: $gsicon-quora; 
+  }
+}
+.gsicon-reddit {
+  &:before {
+    content: $gsicon-reddit; 
+  }
+}
+.gsicon-rss {
+  &:before {
+    content: $gsicon-rss; 
+  }
+}
+.gsicon-safari {
+  &:before {
+    content: $gsicon-safari; 
+  }
+}
+.gsicon-skype {
+  &:before {
+    content: $gsicon-skype; 
   }
 }
 .gsicon-slack {
   &:before {
-    content: $gsicon-slack;
+    content: $gsicon-slack; 
+  }
+}
+.gsicon-snapchat {
+  &:before {
+    content: $gsicon-snapchat; 
+  }
+}
+.gsicon-spotify {
+  &:before {
+    content: $gsicon-spotify; 
+  }
+}
+.gsicon-stack-overflow {
+  &:before {
+    content: $gsicon-stack-overflow; 
+  }
+}
+.gsicon-stumbleupon {
+  &:before {
+    content: $gsicon-stumbleupon; 
+  }
+}
+.gsicon-soundcloud {
+  &:before {
+    content: $gsicon-soundcloud; 
+  }
+}
+.gsicon-tumblr {
+  &:before {
+    content: $gsicon-tumblr; 
   }
 }
 .gsicon-twitch {
   &:before {
-    content: $gsicon-twitch;
+    content: $gsicon-twitch; 
+  }
+}
+.gsicon-twitter {
+  &:before {
+    content: $gsicon-twitter; 
   }
 }
 .gsicon-ubuntu {
   &:before {
-    content: $gsicon-ubuntu;
+    content: $gsicon-ubuntu; 
+  }
+}
+.gsicon-vimeo {
+  &:before {
+    content: $gsicon-vimeo; 
   }
 }
 .gsicon-vk {
   &:before {
-    content: $gsicon-vk;
+    content: $gsicon-vk; 
+  }
+}
+.gsicon-whatsapp {
+  &:before {
+    content: $gsicon-whatsapp; 
   }
 }
 .gsicon-wikipedia {
   &:before {
-    content: $gsicon-wikipedia;
+    content: $gsicon-wikipedia; 
+  }
+}
+.gsicon-wordpress {
+  &:before {
+    content: $gsicon-wordpress; 
+  }
+}
+.gsicon-yelp {
+  &:before {
+    content: $gsicon-yelp; 
+  }
+}
+.gsicon-youtube {
+  &:before {
+    content: $gsicon-youtube; 
+  }
+}
+.gsicon-zerply {
+  &:before {
+    content: $gsicon-zerply; 
+  }
+}
+.gsicon-500px {
+  &:before {
+    content: $gsicon-500px; 
+  }
+}
+.gsicon-tribars {
+  &:before {
+    content: $gsicon-tribars; 
   }
 }
 .gsicon-cc-remix {
   &:before {
-    content: $gsicon-cc-remix;
+    content: $gsicon-cc-remix; 
   }
 }
 .gsicon-cc-zero {
   &:before {
-    content: $gsicon-cc-zero;
+    content: $gsicon-cc-zero; 
   }
 }
 .gsicon-cc-by {
   &:before {
-    content: $gsicon-cc-by;
+    content: $gsicon-cc-by; 
   }
 }
 .gsicon-cc-cc {
   &:before {
-    content: $gsicon-cc-cc;
+    content: $gsicon-cc-cc; 
   }
 }
 .gsicon-cc-nc-eu {
   &:before {
-    content: $gsicon-cc-nc-eu;
+    content: $gsicon-cc-nc-eu; 
   }
 }
 .gsicon-cc-nc-jp {
   &:before {
-    content: $gsicon-cc-nc-jp;
+    content: $gsicon-cc-nc-jp; 
   }
 }
 .gsicon-cc-nc {
   &:before {
-    content: $gsicon-cc-nc;
+    content: $gsicon-cc-nc; 
   }
 }
 .gsicon-cc-nd {
   &:before {
-    content: $gsicon-cc-nd;
+    content: $gsicon-cc-nd; 
   }
 }
 .gsicon-cc-pd {
   &:before {
-    content: $gsicon-cc-pd;
+    content: $gsicon-cc-pd; 
   }
 }
 .gsicon-cc-sa {
   &:before {
-    content: $gsicon-cc-sa;
+    content: $gsicon-cc-sa; 
   }
 }
 .gsicon-cc-sampling-plus {
   &:before {
-    content: $gsicon-cc-sampling-plus;
+    content: $gsicon-cc-sampling-plus; 
   }
 }
 .gsicon-cc-sampling {
   &:before {
-    content: $gsicon-cc-sampling;
+    content: $gsicon-cc-sampling; 
   }
 }
 .gsicon-cc-share {
   &:before {
-    content: $gsicon-cc-share;
+    content: $gsicon-cc-share; 
   }
 }
 
