--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 @font-face {
   font-family: 'Get-Social-Font';
-  src:  url('fonts/Get-Social-Font.eot?demmwc');
-  src:  url('fonts/Get-Social-Font.eot?demmwc#iefix') format('embedded-opentype'),
-    url('fonts/Get-Social-Font.ttf?demmwc') format('truetype'),
-    url('fonts/Get-Social-Font.woff?demmwc') format('woff'),
-    url('fonts/Get-Social-Font.svg?demmwc#Get-Social-Font') format('svg');
+  src:  url('fonts/Get-Social-Font.eot?zhdupj');
+  src:  url('fonts/Get-Social-Font.eot?zhdupj#iefix') format('embedded-opentype'),
+    url('fonts/Get-Social-Font.ttf?zhdupj') format('truetype'),
+    url('fonts/Get-Social-Font.woff?zhdupj') format('woff'),
+    url('fonts/Get-Social-Font.svg?zhdupj#Get-Social-Font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-i {
+[class^="gsicon-"], [class*=" gsicon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'Get-Social-Font' !important;
   speak: none;
@@ -72,6 +72,9 @@ i {
 .gsicon-drupal:before {
   content: "\e60c";
 }
+.gsicon-edge:before {
+  content: "\e903";
+}
 .gsicon-ello:before {
   content: "\e60e";
 }
@@ -94,7 +97,7 @@ i {
   content: "\e610";
 }
 .gsicon-flipboard:before {
-  content: "\e903";
+  content: "\e904";
 }
 .gsicon-foursquare:before {
   content: "\e611";
@@ -103,7 +106,7 @@ i {
   content: "\e613";
 }
 .gsicon-gitlab:before {
-  content: "\e904";
+  content: "\e906";
 }
 .gsicon-google:before {
   content: "\e908";
@@ -145,13 +148,16 @@ i {
   content: "\e61d";
 }
 .gsicon-mailchimp:before {
-  content: "\e906";
-}
-.gsicon-meerkat:before {
   content: "\e907";
 }
-.gsicon-medium:before {
+.gsicon-meerkat:before {
   content: "\e909";
+}
+.gsicon-medium:before {
+  content: "\e90b";
+}
+.gsicon-mix:before {
+  content: "\e90c";
 }
 .gsicon-myspace:before {
   content: "\e61e";
@@ -160,22 +166,22 @@ i {
   content: "\e61f";
 }
 .gsicon-patreon:before {
-  content: "\e90b";
+  content: "\e90d";
 }
 .gsicon-paypal:before {
   content: "\e620";
 }
 .gsicon-periscope:before {
-  content: "\e90c";
+  content: "\e90e";
 }
 .gsicon-pinterest:before {
   content: "\e621";
 }
 .gsicon-pocket:before {
-  content: "\e90d";
+  content: "\e90f";
 }
 .gsicon-quora:before {
-  content: "\e90e";
+  content: "\e910";
 }
 .gsicon-reddit:before {
   content: "\e622";
@@ -190,7 +196,7 @@ i {
   content: "\e625";
 }
 .gsicon-slack:before {
-  content: "\e90f";
+  content: "\e911";
 }
 .gsicon-snapchat:before {
   content: "\e636";
@@ -201,9 +207,6 @@ i {
 .gsicon-stack-overflow:before {
   content: "\e627";
 }
-.gsicon-stumbleupon:before {
-  content: "\e628";
-}
 .gsicon-soundcloud:before {
   content: "\e629";
 }
@@ -211,25 +214,25 @@ i {
   content: "\e62a";
 }
 .gsicon-twitch:before {
-  content: "\e910";
+  content: "\e912";
 }
 .gsicon-twitter:before {
   content: "\e605";
 }
 .gsicon-ubuntu:before {
-  content: "\e911";
+  content: "\e913";
 }
 .gsicon-vimeo:before {
   content: "\e62b";
 }
 .gsicon-vk:before {
-  content: "\e912";
+  content: "\e914";
 }
 .gsicon-whatsapp:before {
   content: "\e637";
 }
 .gsicon-wikipedia:before {
-  content: "\e913";
+  content: "\e915";
 }
 .gsicon-wordpress:before {
   content: "\e62d";
